# bicocca-appunti

./: .gitignore  Makefile  README.md  TODO.md  assignments.sh  clean.sh  cleanlocal.sh  depclean.sh  files.sh  index.html  lex.md  out.stream.txt  publish.sh  server.sh  static.sh
.github/workflows/: main.yml  static.disabled  static.yml
ADS/chapters/: 001.tex
ADS/deployability/: quotes.bib  report.tex
ADS/project/: .gitignore  ArchitettureDelSoftware.vpp
APAL/: Makefile  appunti.tex
APS/: README.md  appunti.aux  appunti.out  appunti.tex
ARCH/: appunti.tex
BIOINF/: Makefile  appunti.tex  q.tex
CC/: appunti.tex
EA/: appunti.tex
INFO/: README.md  appunti.tex
IR/: appunti.tex  bibliography.bib  ir.py  main.py
LET/: README.md  appunti.tex
LIT/: appunti.tex
MCOR/: 1 - Introduzione a MCOR.md  3 - .md  4 - md  README.md  appunti.tex
ML/: 1 - Introduzione a ML.md  2 - Decision Trees.md  3 - Perceptron.md  README.md  algos.md  decision_tree.d2
REV/: appunti.tex
REV/assignments/detecting-duplicated-code/tools/dupdec/: LICENSE  pyproject.toml  requirements.txt  scan.sh
REV/assignments/detecting-duplicated-code/tools/dupdec/dupdec/: __main__.py
ROPR/: Makefile  appunti.tex
SAF/: appunti.tex
SCMT/: appunti.tex
SDL/: appunti.tex
TCOM/: 1 - Categorie di problemi.md  1 - Introduzione a TCOM.md  2 - Esempi di TM.md  4 - BOH.md  4 - Categorie di linguaggi.md  5 - Problemi indecidibili e RIC RE.md  6 - .md  6 - Classi di complessita.md  README.md  appunti.tex
TELE/: appunti.tex
TS/: README.md  appunti.tex  q.tex
skel/: Makefile2
(+217 files in other folders)
